--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
         <section id="telefone">
 
+            <iframe src="home.html" frameborder="0" name="tela" id="tela"></iframe>
+
         </section>
 
         <section id="redes-sociais">
